--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>IgoTech :: Blog & Forum Nouvelles Technologies</title>
-  <meta name="description" content="">
+  <meta name="description" content="text/html">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -23,40 +23,44 @@
 
   <!-- Add your site or application content here -->
 
-  <header class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1>IgoN.Tech</h1>
-      <p>Blog & Forum Nouvelles Technologies</p>
-    </div>
-    <nav class="navbar navbar-toggleable-xl navbar-light bg-faded">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <!-- Start-Header-->
 
-      <!-- Brand -->
-      <a class="navbar-brand" href="#">Logo IgoNtech</a>
+			<div class="header">
+				<div class="wrap">
+				<!-- Start-logo-->
+				<div class="logo">
+					<a href="index.html"><img src="images/logo.png" title="logoIgoNtech" /></a>
+				</div>
 
-      <!-- Links -->
-      <div class="collapse navbar-collapse justify-content-end" id="nav-content">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Articles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Forum</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Restons connectés !</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+				<!-- End-Logo-->
+				<!-- Start-Header-nav-->
+
+				<div class="clear"> </div>
+
+				<!-- End-Header-nav-->
+			</div>
+			</div>
+			<div class="header-nav1">
+				<div class="wrap">
+					<ul>
+						<li class="current"><a href="index.html">Blog</a></li>
+						<li><a href="#">A propos de nous</a></li>
+						<li><a href="#">Articles</a></li>
+						<li><a href="#">Forum</a></li>
+						<li><a href="contact.html">Restons connecté !</a></li>
+					</ul>
+
+				<div class="search-bar">
+					<ul>
+						<li><input type="text"></li>
+						<li><input type="submit" value="" /></li>
+					</ul>
+				</div>
+				</div>
+				
 
     <main>
-      
+
     </main>
 
 
