--- a/index.html
+++ b/index.html
@@ -25,51 +25,149 @@
 
   <!-- Start-Header-->
 
-			<div class="header">
-				<div class="wrap">
-				<!-- Start-logo-->
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logoIgoNtech" /></a>
-				</div>
+  <div class="header">
+    <div class="wrap">
+      <!-- Start-logo-->
+      <div class="logo">
+        <a href="index.html"><img src="images/logo.png" title="logoIgoNtech" /></a>
+      </div>
 
-				<!-- End-Logo-->
-				<!-- Start-Header-nav-->
+      <!-- End-Logo-->
+      <!-- Start-Header-nav-->
 
-				<div class="clear"> </div>
+      <div class="clear"> </div>
 
-				<!-- End-Header-nav-->
-			</div>
-			</div>
-			<div class="header-nav1">
-				<div class="wrap">
-					<ul>
-						<li class="current"><a href="index.html">Blog</a></li>
-						<li><a href="#">A propos de nous</a></li>
-						<li><a href="#">Articles</a></li>
-						<li><a href="#">Forum</a></li>
-						<li><a href="contact.html">Restons connecté !</a></li>
-					</ul>
+      <!-- End-Header-nav-->
+    </div>
+  </div>
+  <div class="header-nav1">
+    <div class="wrap">
+      <ul>
+        <li class="current"><a href="index.html">Blog</a></li>
+        <li><a href="#">A propos de nous</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#">Forum</a></li>
+        <li><a href="contact.html">Restons connecté !</a></li>
+      </ul>
 
-				<div class="search-bar">
-					<ul>
-						<li><input type="text"></li>
-						<li><input type="submit" value="" /></li>
-					</ul>
-				</div>
-				</div>
-				
+      <div class="search-bar">
+        <ul>
+          <li><input type="text"></li>
+          <li><input type="submit" value="" /></li>
+        </ul>
+      </div>
+    </div>
 
     <main>
 
-    </main>
+      <div class="clear"> </div>
+      <!-- content-gallery-->
+    </div>
+    <div class="wrap">
+      <div class="about">
+        <div class="services-sidebar">
+          <h4>Categories</h4>
+          <ul>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+          </ul><br>
+          <h4>Archives</h4>
+          <ul>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Jan, 2012</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Feb, 2012</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">March, 2012</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">April, 2012</a></li>
+          </ul>
+        </div>
+        <div class="bloder-content">
+
+          <div class="bloger-grid">
+
+            <div class="blog-img">
+              <img src="images/img11.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Lorem ipsum</a></li>
+                <li><a href="#">: 23-02-1989</a></li>
+                <li><a href="single.html"><span>Readmore</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
+
+          <div class="clear"> </div>
+          <div class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img20.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Lorem ipsum</a></li>
+                <li><a href="#">: 23-02-1989</a></li>
+                <li><a href="single.html"><span>Readmore</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
+          <div class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img2.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Lorem ipsum</a></li>
+                <li><a href="#">: 23-02-1989</a></li>
+                <li><a href="single.html"><span>Readmore</span></a></li>
+              </ul>
+            </div>
+
+          </div>
+          <div style="border-bottom:none;" class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img15.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Lorem ipsum</a></li>
+                <li><a href="#">: 23-02-1989</a></li>
+                <li><a href="single.html"><span>Readmore</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
+        </div>
+
+        <div class="clear"> </div>
+
+      </div>
+    </div>
+
+    <div class="clear"> </div>
+    <!-- End-content-gallery-->
+
+  </main>
 
 
 
-    <footer>
+  <footer>
 
-    </footer>
-
-
+  </footer>
 
 
 
@@ -102,19 +200,21 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-      </script>
-    </body>
-    </html>
+
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='https://www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
+  </html>
