--- a/index.html
+++ b/index.html
@@ -105,69 +105,65 @@
             <div class="clear"> </div>
           </div>
 
+
           <div class="clear"> </div>
-          <div class="bloger-grid">
-            <div class="blog-img">
-              <img src="images/img20.jpg" title="img6" />
-            </div>
-            <div class="bloger-content">
-              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">: 23-02-1989</a></li>
-                <li><a href="single.html"><span>Readmore</span></a></li>
-              </ul>
-            </div>
-            <div class="clear"> </div>
-          </div>
-          <div class="bloger-grid">
-            <div class="blog-img">
-              <img src="images/img2.jpg" title="img6" />
-            </div>
-            <div class="bloger-content">
-              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">: 23-02-1989</a></li>
-                <li><a href="single.html"><span>Readmore</span></a></li>
-              </ul>
-            </div>
+          <!-- End-content-gallery-->
 
-          </div>
-          <div style="border-bottom:none;" class="bloger-grid">
-            <div class="blog-img">
-              <img src="images/img15.jpg" title="img6" />
-            </div>
-            <div class="bloger-content">
-              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">: 23-02-1989</a></li>
-                <li><a href="single.html"><span>Readmore</span></a></li>
-              </ul>
-            </div>
-            <div class="clear"> </div>
-          </div>
-        </div>
+      </main>
 
-        <div class="clear"> </div>
+      <!-- DC Pagination:C9 Start -->
+			<div class="wrap">
+	<!-- DC Pagination:A3 Start -->
+						<ul class="dc_pagination dc_paginationA dc_paginationA03">
+						  <li><a href="#" class="first">First</a></li>
+						  <li><a href="#" class="previous">Previous</a></li>
+						  <li><a href="#">1</a></li>
+						  <li><a href="#">2</a></li>
+						  <li><a href="#" class="current">3</a></li>
+						  <li><a href="#">4</a></li>
+						  <li><a href="#">5</a></li>
+						  <li><a href="#" class="next">Next</a></li>
+						  <li><a href="#" class="last">Last</a></li>
 
-      </div>
-    </div>
+						</ul>
+							<!-- DC Pagination:A3 End -->
 
-    <div class="clear"> </div>
-    <!-- End-content-gallery-->
+	    		<div class="clear"> </div>
 
-  </main>
+	<!-- DC Pagination:C9 End -->
+
+		</div>
+	<div class="clear"> </div>
+		<div class="footer">
+				<div class="wrap">
+				<h3>SAY HELLO</h3>
+				<p>Lorem ipsum dolor sit amet, consect etur adipiscing elit. Vestibulum ut tortor urnati dunt
+
+						dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultri dolore cie
+
+						lorem ipsum commete.</p>
+
+			<div class="footerlinks">
+				<div class="share">
+		                	<li><a href="#" target="_blank" title="Facebook"><span class="social fbook"> </span></a></li>
+		                	<li><a href="#" target="_blank" title="twitter"><span class="social twitter"> </span></a></li>
+		                    <li><a href="#" target="_blank" title="tumblr"><span class="social tumblr"> </span></a></li><br />
+		                    <li><a href="#" target="_blank" title="delicious"><span class="social delicious"> </span></a></li>
+		                	<li><a href="#" target="_blank" title="delicious"><span class="social delicious"> </span></a></li>
+		                	<li><a href="#" target="_blank" title="dribbble"><span class="social dribbble"> </span></a></li>
+		                    <li><a href="#" target="_blank" title="evernote"><span class="social evernote"> </span></a></li>
+		                    <li><a href="#" target="_blank" title="stumbleupon"><span class="social stumbleupon"> </span></a></li>
+
+		                </div>
 
 
-
-  <footer>
-
-  </footer>
+			</div>
+			</div>
+			</div>
+			<div class="footer1">
+	<p class="link"><span>© All rights Reserved | Designed by&nbsp; <a href="http://w3layouts.com/"> W3Layouts</a>	</span></p>
+</div>
+		<!-- End-wrap -->
 
 
 
@@ -202,19 +198,20 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='https://www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script>
-  </body>
-  </html>
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+          e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+          e.src='https://www.google-analytics.com/analytics.js';
+          r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+          ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+          </script>
+        </body>
+        </html>
