Modification in the Navbar / index.html

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="wrap">
       <ul>
         <li class="current"><a href="index.html">Blog</a></li>
-        <li><a href="#">A propos de nous</a></li>
+        <li><a href="#">Igo</a></li>
         <li><a href="#">Articles</a></li>
         <li><a href="#">Forum</a></li>
-        <li><a href="contact.html">Restons connecté !</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <div class="search-bar">
