--- a/index.html
+++ b/index.html
@@ -23,95 +23,146 @@
 
   <!-- Add your site or application content here -->
 
-  <!-- Start-Header-->
+  <body>
+		<!-- Start-wrap -->
 
-  <div class="header">
-    <div class="wrap">
-      <!-- Start-logo-->
-      <div class="logo">
-        <a href="index.html"><img src="images/logo.png" title="logoIgoNtech" /></a>
-      </div>
+			<!-- Start-Header-->
 
-      <!-- End-Logo-->
-      <!-- Start-Header-nav-->
+			<div class="header">
+				<div class="wrap">
+				<!-- Start-logo-->
+				<div class="logo">
+					<a href="index.html"><img src="images/logo.png" title="logo" /></a>
+				</div>
 
-      <div class="clear"> </div>
+				<!-- End-Logo-->
+				<!-- Start-Header-nav-->
 
-      <!-- End-Header-nav-->
-    </div>
-  </div>
-  <div class="header-nav1">
-    <div class="wrap">
-      <ul>
-        <li class="current"><a href="index.html">Blog</a></li>
-        <li><a href="#">Igo</a></li>
-        <li><a href="#">Articles</a></li>
-        <li><a href="#">Forum</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+				<div class="clear"> </div>
 
-      <div class="search-bar">
-        <ul>
-          <li><input type="text"></li>
-          <li><input type="submit" value="" /></li>
-        </ul>
-      </div>
-    </div>
+				<!-- End-Header-nav-->
+			</div>
+			</div>
+			<div class="header-nav1">
+				<div class="wrap">
+					<ul>
+						<li class="current"><a href="index.html">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Support</a></li>
+						<li><a href="#">Advertice</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
 
-    <main>
+				<div class="search-bar">
+					<ul>
+						<li><input type="text"></li>
+						<li><input type="submit" value="" /></li>
+					</ul>
+				</div>
+				</div>
 
-      <div class="clear"> </div>
-      <!-- content-gallery-->
-    </div>
-    <div class="wrap">
-      <div class="about">
-        <div class="services-sidebar">
-          <h4>Categories</h4>
-          <ul>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-          </ul><br>
-          <h4>Archives</h4>
-          <ul>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Jan, 2012</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">Feb, 2012</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">March, 2012</a></li>
-            <li><img src="images/pointer.png" title="pointer" /><a href="#">April, 2012</a></li>
-          </ul>
-        </div>
-        <div class="bloder-content">
+			<!-- End-Header-->
+			<div class="clear"> </div>
+			<!-- content-gallery-->
+			</div>
+			<div class="wrap">
+				<div class="about">
+					<div class="services-sidebar">
+					<h4>Categories</h4>
+					<ul>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
+					</ul><br>
+					<h4>Archives</h4>
+					<ul>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Jan, 2012</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">Feb, 2012</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">March, 2012</a></li>
+						<li><img src="images/pointer.png" title="pointer" /><a href="#">April, 2012</a></li>
+					</ul>
+				</div>
+					<div class="bloder-content">
 
-          <div class="bloger-grid">
+					<div class="bloger-grid">
 
-            <div class="blog-img">
-              <img src="images/img11.jpg" title="img6" />
-            </div>
-            <div class="bloger-content">
-              <h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">: 23-02-1989</a></li>
-                <li><a href="single.html"><span>Readmore</span></a></li>
-              </ul>
-            </div>
-            <div class="clear"> </div>
-          </div>
+						<div class="blog-img">
+							<img src="images/img11.jpg" title="img6" />
+						</div>
+						<div class="bloger-content">
+							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+							<ul>
+								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">: 23-02-1989</a></li>
+								<li><a href="single.html"><span>Readmore</span></a></li>
+							</ul>
+						</div>
+						<div class="clear"> </div>
+					</div>
 
+					<div class="clear"> </div>
+					<div class="bloger-grid">
+						<div class="blog-img">
+							<img src="images/img20.jpg" title="img6" />
+						</div>
+						<div class="bloger-content">
+							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+							<ul>
+								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">: 23-02-1989</a></li>
+								<li><a href="single.html"><span>Readmore</span></a></li>
+							</ul>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					<div class="bloger-grid">
+						<div class="blog-img">
+							<img src="images/img2.jpg" title="img6" />
+						</div>
+						<div class="bloger-content">
+							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+							<ul>
+								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">: 23-02-1989</a></li>
+								<li><a href="single.html"><span>Readmore</span></a></li>
+							</ul>
+						</div>
 
-          <div class="clear"> </div>
-          <!-- End-content-gallery-->
+					</div>
+					<div style="border-bottom:none;" class="bloger-grid">
+						<div class="blog-img">
+							<img src="images/img15.jpg" title="img6" />
+						</div>
+						<div class="bloger-content">
+							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
+							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+							<ul>
+								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">: 23-02-1989</a></li>
+								<li><a href="single.html"><span>Readmore</span></a></li>
+							</ul>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					</div>
 
-      </main>
+					<div class="clear"> </div>
 
-      <!-- DC Pagination:C9 Start -->
+			</div>
+			</div>
+
+<div class="clear"> </div>
+			<!-- End-content-gallery-->
+			<!-- DC Pagination:C9 Start -->
 			<div class="wrap">
 	<!-- DC Pagination:A3 Start -->
 						<ul class="dc_pagination dc_paginationA dc_paginationA03">
@@ -164,6 +215,8 @@
 	<p class="link"><span>© All rights Reserved | Designed by&nbsp; <a href="http://w3layouts.com/"> W3Layouts</a>	</span></p>
 </div>
 		<!-- End-wrap -->
+
+	</body>
 
 
 
