--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="wrap">
         <!-- Start-logo-->
         <div class="logo">
-          <a href="index.html"><img src="images/logo.png" title="logo" /></a>
+          <a href="index.html"><img src="images/logo.png" title="logo-IgoTech" /></a>
         </div>
 
         <!-- End-Logo-->
